Fix below minimum message, number spinner on Firefox

--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -64,6 +64,10 @@ input[type='number']::-webkit-outer-spin-button {
   margin: 0;
 }
 
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 input[type='submit'] {
   width: auto;
   cursor: pointer;
