--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -54,8 +54,8 @@
     }
 
     &__message {
-      max-width: 32rem;
-      margin: 1rem auto 0;
+      // max-width: 32rem;
+      margin: 2rem auto 0;
     }
   }
 
